--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "oakland venue scraper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node index.js"
   },
   "author": "morganherlocker",
   "license": "MIT",
