--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^0.19.0",
+    "ical.js": "^1.1.2",
     "moment": "^2.10.6",
     "queue-async": "^1.0.7",
     "request": "^2.65.0"
